--- a/activity/index.html
+++ b/activity/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>activity</title>
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
 <div id="app"></div>
